logs/watchdog_20251012_1415.log
[12/10/2025 14:15:01,72] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 14:15:01,96] END WATCHDOG 
